swscale: Use full resolution chroma for yuv2rgb when the input has full chroma

See Ticket3028

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>